Closed Bug 125183 Opened 24 years ago Closed 24 years ago

OS/2 port starts helper app invisible

Categories

(NSPR :: NSPR, defect)

3.1.2
x86
OS/2
defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: enigma2, Assigned: netscape)

References

()

Details

Attachments

(1 file)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:0.9.8+) Gecko/20020207 BuildID: 20020212 With the OS/2 port of Mozilla, it is impossible to switch to the Help Application after it has started. Reproducible: Always Steps to Reproduce: 1.get/install (simple instructions on the webpage) z! (mp3 player) from http://dink.org/z/ 2.click on a "station" at http://www.shoutcast.com 3.try to switch to the z! task Actual Results: z! audio player starts playing music, but its impossible to switch to this application, it doesn't show up in the task list. Expected Results: Helper app (in this case, z!) should show up in the task list. (like in NS 4.61, NS 2.02 ..etc.)
Actually an OS/2 NSPR issue
Assignee: asa → wtc
Status: UNCONFIRMED → NEW
Component: Browser-General → NSPR
Ever confirmed: true
Product: Browser → NSPR
QA Contact: doronr → wtc
Target Milestone: --- → 3.1.2
Version: other → 3.1.2
Chris, could you check this patch into the tip and client branch of NSPR? Thanks.
Assignee: wtc → seawood
Comment on attachment 69325 [details] [diff] [review] Fix for problem - wrong flags. r=wtc.
Attachment #69325 - Flags: review+
The patch has been checked in to the tip & the client branch. Checking in os2misc.c; /cvsroot/mozilla/nsprpub/pr/src/md/os2/os2misc.c,v <-- os2misc.c new revision: 3.13; previous revision: 3.12 done Checking in os2misc.c; /cvsroot/mozilla/nsprpub/pr/src/md/os2/os2misc.c,v <-- os2misc.c new revision: 3.11.2.2; previous revision: 3.11.2.1 done
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
*** Bug 126875 has been marked as a duplicate of this bug. ***
verified - VIO helper apps work.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: