Fix problem of "invisible" helper apps on OS/2. Thanks to Mike Kaply <mkaply@us.ibm.com> for the patch. Bug #125183 r=wtc